--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">DailyActivityRegister</string>
     <string name="action_settings">Settings</string>
     <string name="action_add_activity">Add Activity</string>
+    <string name="action_add_project">Add Project</string>
+    <string name="action_upload_excel">Upload Excel</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
